# flash-attention

./: CMakeLists.txt
csrc/flash_attn/: flash_api.cpp
flash_attn/: flash_attn_interface.py
